# Compass-Compressor

./: .gitignore  Build.rtf  CMakeLists.txt
Source/: .bak_20260103-124306_tx_phase0_min_skeleton_CREATED_FILES.txt  CMakeLists.txt  CMakeLists.txt.bak_20260103-124548_add_juce_header_gen  CMakeLists.txt.bak_20260103-124813_disable_vst2_wrapper  CMakeLists.txt.bak_20260103-124932_disable_vst2  CMakeLists.txt.bak_20260103-125141_vst3_only_phase0  CMakeLists.txt.bak_20260103-130205_disable_vst3_replace_vst2  CMakeLists.txt.bak_20260103-132511_phase1_add_core_headers  PluginEditor.cpp  PluginEditor.cpp.bak2  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.cpp.bak_20260103-132603_phase1_pipeline_calls  PluginProcessor.h  PluginProcessor.h.bak_20260103-132538_phase1_pipeline_member
Source/Core/: CharacterEngine.h  CompressorPipeline.h  CompressorPipeline.h.bak_20260103-140752_phase2_wire_detector_to_hybrid  DetectorCore.h  DetectorCore.h.bak_20260103-134852_phase2_detectorcore_peak_rms_blend_scaffold  DetectorSplit.h  DualStageRelease.h  GainComputer.h  GainReductionStage.h  HybridEnvelopeEngine.h  HybridEnvelopeEngine.h.bak_20260103-140346_phase2_hybrid_weights_blend  InputConditioning.h  LowEndGuard.h  OutputStage.h  OversamplingAndSafety.h  ParallelMixer.h  StereoLink.h  TransientGuard.h
Source/UI/: MainEditor.cpp.rtf
build_phase0/: CMakeCache.txt  Makefile  cmake_install.cmake
build_phase0/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build_phase0/JUCE/modules/: Makefile  cmake_install.cmake
build_phase0/JUCE/tools/: CMakeCache.txt  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build_phase0/JUCE/tools/modules/: Makefile  (+1 more)
build_phase0/Source/: CompassCompressor_vst3_helper  Makefile  cmake_install.cmake
(+7 files in other folders)
